--- a/css/style.css
+++ b/css/style.css
@@ -12,16 +12,16 @@ body{
 
 nav{
     width: 100%;
-    height: 120px;
-    background-color: #0E79B2;
+    height: 80px;
+    background-color: #bef1da;
     position: fixed;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
     z-index: 100;
 }
 
 nav h1{
-    margin-top: 30px;
-    color: #FBFEF9;
+    margin-top: 2px;
+    color: #008bff;
     text-align: center;
     font-size: 190%;
     font-style: italic;
@@ -35,21 +35,20 @@ nav ul{
 
 nav ul li{
     display: inline-block;
-    font-size: 150%;
+    font-size: 100%;
     width: 14%;
     height: 100%;
     text-align: center;
-    padding-top: 10px;
 }
 
 nav ul li a:hover{
-    color: #191923;
+    color: #008bff;
     transition-duration: 0.5s;
 }
 
 a, a:active, a:visited{
     text-decoration: none;
-    color: #FBFEF9;
+    color: #656565;
     width: 100%;
     height: 100%;
     padding: 2px 2px;
@@ -66,19 +65,11 @@ header > h1{
     font-size: 260%;
     color: white;
     position: absolute;
-    top: 280px;
+    top: 350px;
     left: 50%;
     transform: translateX(-50%);
     font-style: italic;
     font-weight: bolder;
-}
-
-.overlay{
-    position:absolute;
-    height: 750px;
-    width: 100%;
-    background-color: black;
-    opacity: 70%;
 }
 
 label{
@@ -109,6 +100,7 @@ input[type=text] {
     margin: 8px 0;
     box-sizing: border-box;
     border-radius: 10;
+    font-size: medium;
 }
 
 input[type=text]:focus {
@@ -129,4 +121,61 @@ input[type=text]:focus {
 
 #soortCampingplek{
     width: 50%;
+}
+
+.formextrastyle{
+    width: 70px;
+    height: 50px;
+    font-size: medium;
+}
+
+.formextrastyledatum{
+    width: 120px;
+    height: 50px;
+    font-size: medium;
+}
+
+@media(max-width: 1600px){
+    header h1{ 
+        font-size: 200%;
+    }
+}
+
+@media(max-width: 1210px){
+    nav{
+        color: transparent;
+    }
+    nav h1{
+        font-size: 150%;
+    }
+    nav ul li{ 
+        width: auto;
+        margin: 1px;
+    }
+    header h1{ 
+        color: transparent;
+    }
+    header img{
+        height: 300px;
+    }
+}
+
+@media(max-width: 590px){
+    nav{
+        height: 120px;
+    }
+    nav h1{
+        color: transparent;
+        position:fixed;
+    }
+    nav ul li{
+        margin-top: 15px;
+        font-size: medium;
+    }
+}
+
+@media(max-width: 720px){
+    .formcase{
+        width: 100%;
+    }
 }
